src/HomePage.css
.home-page-root{
}

.home-page-menu{
  margin-top: 0px;
  width: 100%;
  height: 37px;
  background-color: #20c5ff;
}

.home-page-body{
  margin-top: 10px;
}

.dditem-wrapper{
  width: 100%;
  height: 100%;
  background-color: transparent;
}

.user-col{

}

community-root{

}

community-each{
  background-color: #a8d9ff;
}

.communities-col{
  //margin-left: 770px;
}

news-feed-root{
  margin-top: 10px;
  width: 400px;
  height: 100%;
  border-top: solid 2px #8a8a8a;
  border-left: solid 2px #8a8a8a;
  border-right: solid 2px #8a8a8a;
  //border-bottom: none;
}

news-feed-each{

}

feed-wrapper{
  margin-bottom: 10px;
}

news-feed-col{
  border: 1px solid #cccccc;
  background-color: #bfbfbf;
  height: 100%;
  width: 500px;
}

.row-root{
  width: 100%;
}

.card-wrapper {
  margin-top: 10px;
  margin-left: 25px;
  background-color: #d9d9d9;
  width: 200px;
  height: 300px;
}

card-communities-wrapper{
  margin-top: 10px;
  margin-left: 20px;
  background-color: #d9d9d9;
  width: 200px;
  height: 300px;
  }

.btn-danger{
  margin-left: 20px;
}
.home-page-ryry{
  font-family: "Arial Black";
  margin: 5px;
}

.modal-root{
  padding-top: 20px;
  margin-top: 20px;
  background-size: 100% 100%;
  width: 600px;
  height: 400px;
}

.modal-card{
  board: solid black 3px;
}

.group-description{
  width: 180px;
  height: 100px;
}

